--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0/css/bootstrap.min.css" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-    <title>Employee Tracker</title>
+    <title>Employee Directory</title>
 </head>
 
 <body>
